--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,15 +5,32 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
+
+permissions:
+  contents: write
+
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Docker Login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secret.GH_PAT }}
       -
         name: Set up Go
         uses: actions/setup-go@v4
