--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,9 @@ jobs:
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
+      - uses: aquaproj/aqua-installer@v2.1.2
+        with:
+          aqua_version: v2.10.1
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
