--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,7 @@ jobs:
       - uses: aquaproj/aqua-installer@v2.1.2
         with:
           aqua_version: v2.10.1
+          policy_allow: "true"
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
